# gsd

./: .env  .envrc  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json  docker-compose.yaml
migrations/: 20240222203528_create_stories.sql  20240222203532_create_tasks.sql
scripts/: aliases
src/: api.rs  config.rs  dto.rs  entity.rs  lib.rs  main.rs  repo.rs  validate.rs
src/api/: ctx.rs  dto.rs  mod.rs  story.rs  task.rs
src/config/: mod.rs  tcp.rs
src/domain/: story.rs  task.rs
src/error/: http.rs  mod.rs
src/repo/: mod.rs  story.rs  task.rs
src/util/: validate.rs
