[package]
name = "gsd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
] }
dotenv = "0.15.0"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.0"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "migrate",
] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.17", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-fmt",
    "run-cargo-clippy",
]

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

[profile.release]
codegen-units = 1
lto = 'thin'
